# apache_beam_left_join

./: beam.py  pyproject.toml
