[tool.poetry]
name = "beam"
version = "0.1.0"
description = ""
authors = ["AnagumaReonKK <niwaniwaniwaniwatori.gairuze@gmail.com>"]
readme = "README.md"
packages = [{include = "python_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.3.2"
jupyter = "^1.0.0"
pandas = "^1.5.3"
apache-beam = {extras = ["dataframe"], version = "^2.46.0"}
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
