[tool.poetry]
name = "beam"
version = "0.1.0"
description = ""
authors = ["Kamegrueon <niwaniwaniwaniwatori.gairuze@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
apache-beam = "^2.46.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
